[package]
name = "twitch_oauth2"
version = "0.11.1"
edition = "2021"
repository = "https://github.com/twitch-rs/twitch_oauth2"
license = "MIT OR Apache-2.0"
description = "Oauth2 for Twitch endpoints"
keywords = ["oauth", "twitch", "async", "asynchronous"]
documentation = "https://docs.rs/twitch_oauth2/0.11.1"
readme = "README.md"
include = [
    "src/*",
    "./Cargo.toml",
    "examples/*",
    "./README.md",
    "CHANGELOG.md",
    "LICENSE*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
client = ["dep:async-trait"]
reqwest = ["dep:reqwest", "client"]
surf_client_curl = ["surf", "surf/curl-client"]
surf = ["dep:surf", "dep:http-types", "http-types?/hyperium_http", "client"]
mock_api = []
all = ["surf_client_curl", "reqwest"]

[dependencies]
thiserror = "1.0.38"
displaydoc = "0.2.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
async-trait = { version = "0.1.63", optional = true }
http = "0.2.8"
surf = { version = "2.3.2", optional = true, default-features = false }
reqwest = { version = "0.11.14", optional = true, default-features = false }
http-types = { version = "2.12.0", optional = true }
once_cell = "1.17.0"
aliri_braid = "0.3.1"
url = "2.3.1"
base64 = "0.21.0"
rand = "0.8.5"
twitch_types = {version = "0.4.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.24.2", features = [
    "rt-multi-thread",
    "macros",
    "test-util",
] }
dotenv = "0.15.0"
anyhow = "1.0.68"
reqwest = "0.11.14"
surf = "2.3.2"
rpassword = "7.2.0"

[workspace]
members = ["xtask"]

[[example]]
name = "user_token"
path = "examples/user_token.rs"
required-features = ["reqwest"]

[[example]]
name = "app_access_token"
path = "examples/app_access_token.rs"
required-features = ["reqwest"]

[[example]]
name = "auth_flow"
path = "examples/auth_flow.rs"
required-features = ["reqwest"]


[[example]]
name = "mock_app"
path = "examples/mock_app.rs"
required-features = ["reqwest", "mock_api"]

[[example]]
name = "mock_user"
path = "examples/mock_user.rs"
required-features = ["reqwest", "mock_api"]

[package.metadata.docs.rs]
features = ["all", "mock_api"]
rustc-args = ["--cfg", "nightly"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
